--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-boto3>=1.40.55
-fastapi>=0.119.0
-mangum>=0.19.0
-numpy>=2.3.3
-requests>=2.32.5
+boto3==1.40.55
+fastapi==0.119.0
+mangum==0.19.0
+numpy==2.2.6
+requests==2.32.5
